kubernetes/catalog/jellyfin/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: 
# Category: MediaServer-Video, MediaServer-Music, MediaServer-Photos
# Stars: 805 | Downloads: 149111823
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin
          ports:
            - containerPort: 8096
              protocol: TCP
              name: webui
            - containerPort: 8920
              protocol: TCP
              name: port-8920
            - containerPort: 7359
              protocol: UDP
              name: port-7359-u
            - containerPort: 1900
              protocol: UDP
              name: port-1900-u
          startupProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8096
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8096
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: jellyfin-data-0
              mountPath: "/config"
            - name: tmp-data-tvshows
              mountPath: "/data/tvshows"
            - name: tmp-data-movies
              mountPath: "/data/movies"
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
      volumes:
      - name: jellyfin-data-0
        persistentVolumeClaim:
          claimName: jellyfin-data-0
      - name: tmp-data-tvshows
        emptyDir:
      - name: tmp-data-movies
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: webui
    - port: 8920
      targetPort: 8920
      protocol: TCP
      name: port-8920
    - port: 7359
      targetPort: 7359
      protocol: UDP
      name: port-7359-u
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: port-1900-u
  type: ClusterIP
